--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/graphql": "^13.1.0",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.8",
     "apollo-server-express": "^3.13.0",
     "graphql": "^16.11.0",
     "pg": "^8.16.3",
